// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component] CustomIcon renders correctly 1`] = `
<Image
  source="test-file-stub"
  style={
    Array [
      Object {
        "height": 16,
        "width": 16,
      },
      Object {},
    ]
  }
/>
`;

exports[`[Component] CustomIcon renders correctly in circle 1`] = `
<Image
  source="test-file-stub"
  style={
    Array [
      Object {
        "height": 16,
        "width": 16,
      },
      Object {
        "borderColor": "#333",
        "borderRadius": 8,
        "borderWidth": 100,
      },
    ]
  }
/>
`;

exports[`[Component] CustomIcon renders correctly in circle with custom size 1`] = `
<Image
  source="test-file-stub"
  style={
    Array [
      Object {
        "height": 40,
        "width": 40,
      },
      Object {
        "borderColor": "#333",
        "borderRadius": 20,
        "borderWidth": 100,
      },
    ]
  }
/>
`;

exports[`[Component] CustomIcon renders correctly with custom size 1`] = `
<Image
  source="test-file-stub"
  style={
    Array [
      Object {
        "height": 40,
        "width": 40,
      },
      Object {},
    ]
  }
/>
`;
